--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>angularjs-google-maps</artifactId>
-    <version>0.6.1-SNAPSHOT</version>
+    <version>1.3.1-SNAPSHOT</version>
     <name>GoogleMap AngularJS Directive</name>
     <description>WebJar for GoogleMap AngularJS Directive</description>
     <url>http://webjars.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>0.6.0</upstream.version>
-        <upstream.url>https://raw.githubusercontent.com/allenhwkim/angularjs-google-maps/v${upstream.version}/dist</upstream.url>
+        <upstream.version>1.3.1</upstream.version>
+        <upstream.url>https://raw.githubusercontent.com/allenhwkim/angularjs-google-maps/v${upstream.version}/build/scripts</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstream.version}</destDir>
         <requirejs>
             {
